--- a/www/app/spots/spots-list-tabs-detail.directive.html
+++ b/www/app/spots/spots-list-tabs-detail.directive.html
@@ -9,6 +9,7 @@
   <span ng-if='spot.properties.sed && spot.properties.sed.strat_section' class='spot-tabs-on strat-section-on'>Strat Section</span>
   <span ng-if='spot.properties.sed && spot.properties.sed.interval' class='spot-tabs-on sed-interval-on'>Sed Interval</span>
   <span ng-if='spot.properties.sed && spot.properties.sed.lithologies' class='spot-tabs-on sed-lithologies-on'>Sed Lithologies</span>
+  <span ng-if='spot.properties.sed && spot.properties.sed.bedding' class='spot-tabs-on sed-bedding-on'>Sed Bedding</span>
   <span ng-if='spot.properties.sed && spot.properties.sed.structures' class='spot-tabs-on sed-structures-on'>Sed Structures</span>
   <span ng-if='spot.properties.sed && spot.properties.sed.interpretations' class='spot-tabs-on sed-interpretations-on'>Sed Interpretations</span>
 </span>
