--- a/www/app/form/auto-fields.template.html
+++ b/www/app/form/auto-fields.template.html
@@ -135,6 +135,7 @@
         <div ng-switch-when='acknowledge'>
           <ion-toggle
             name='{{ field.name }}'
+            ng-model='vm.data[field.name]'
             ng-checked='vm.data[field.name]'
             ng-click='form.toggleAcknowledgeChecked(field.name, vm.data)'
             id='{{ field.name }}Toggle'
