--- a/www/app/maps/side-panel/side-panel.template.html
+++ b/www/app/maps/side-panel/side-panel.template.html
@@ -88,6 +88,9 @@
         <div ng-show='sidePanel.isActiveTab("sed-lithologies")' ng-controller='SedLithologiesTabController as vmChild'>
           <strabo-sed-lithologies-tab-directive></strabo-sed-lithologies-tab-directive>
         </div>
+        <div ng-show='sidePanel.isActiveTab("sed-bedding")' ng-controller='SedBeddingTabController as vmChild'>
+          <strabo-sed-bedding-tab-directive></strabo-sed-bedding-tab-directive>
+        </div>
         <div ng-show='sidePanel.isActiveTab("sed-structures")' ng-controller='SedStructuresTabController as vmChild'>
           <strabo-sed-structures-tab-directive></strabo-sed-structures-tab-directive>
         </div>
