--- a/www/index.html
+++ b/www/index.html
@@ -101,6 +101,7 @@
     <script src="app/spot/petrology/petrology-tab.controller.js"></script>
     <script src="app/spot/relationships/relationships-tab.controller.js"></script>
     <script src="app/spot/samples/samples-tab.controller.js"></script>
+    <script src="app/spot/sed/bedding/bedding-tab.controller.js"></script>
     <script src="app/spot/sed/interpretations/interpretations-tab.controller.js"></script>
     <script src="app/spot/sed/interval/interval-tab.controller.js"></script>
     <script src="app/spot/sed/lithologies/lithologies-tab.controller.js"></script>
@@ -180,9 +181,13 @@
     <script src="app/spot/petrology/petrology-tab.directive.js"></script>
     <script src="app/spot/relationships/relationships-tab.directive.js"></script>
     <script src="app/spot/samples/samples-tab.directive.js"></script>
+    <script src="app/spot/sed/bedding/bedding-tab.directive.js"></script>
+    <script src="app/spot/sed/bedding/shared-bedding-fields.directive.js"></script>
     <script src="app/spot/sed/interpretations/interpretations-tab.directive.js"></script>
     <script src="app/spot/sed/interval/interval-tab.directive.js"></script>
+    <script src="app/spot/sed/lithology-buttons.directive.js"></script>
     <script src="app/spot/sed/lithologies/lithologies-tab.directive.js"></script>
+    <script src="app/spot/sed/sed-characteristics-field.directive.js"></script>
     <script src="app/spot/sed/structures/structures-tab.directive.js"></script>
     <script src="app/spot/sed/strat-section/strat-section-tab.directive.js"></script>
     <script src="app/spot/spot/spot.directive.js"></script>
