Sed Structures: Fixed for subtabs bioturbation and bedding plane

--- a/www/app/spot/sed/structures/structures-tab.directive.html
+++ b/www/app/spot/sed/structures/structures-tab.directive.html
@@ -2,10 +2,10 @@
   <div class='button-bar'>
     <button class='button' ng-class="{'button-positive': vmChild.structuresForm === 'structures_physical'}"
             ng-click='vmChild.switchForm("structures_physical")'>Physical</button>
-    <button class='button' ng-class="{'button-positive': vmChild.structuresForm === 'structures_biogenic'}"
-            ng-click='vmChild.switchForm("structures_biogenic")'>Biogenic</button>
-    <button class='button' ng-class="{'button-positive': vmChild.structuresForm === 'structures_chemogenic'}"
-            ng-click='vmChild.switchForm("structures_chemogenic")'>Chemogenic</button>
+    <button class='button' ng-class="{'button-positive': vmChild.structuresForm === 'structures_bioturbation'}"
+            ng-click='vmChild.switchForm("structures_bioturbation")'>Bioturbation</button>
+    <button class='button' ng-class="{'button-positive': vmChild.structuresForm === 'structures_bedding_plane'}"
+            ng-click='vmChild.switchForm("structures_bedding_plane")'>Bedding Plane</button>
     <button class='button' ng-class="{'button-positive': vmChild.structuresForm === 'structures_pedogenic'}"
             ng-click='vmChild.switchForm("structures_pedogenic")'>Pedogenic</button>
   </div>
