Sed: Added Diagenesis and Fossils pages

--- a/www/index.html
+++ b/www/index.html
@@ -102,6 +102,8 @@
     <script src="app/spot/relationships/relationships-tab.controller.js"></script>
     <script src="app/spot/samples/samples-tab.controller.js"></script>
     <script src="app/spot/sed/bedding/bedding-tab.controller.js"></script>
+    <script src="app/spot/sed/diagenesis/diagenesis-tab.controller.js"></script>
+    <script src="app/spot/sed/fossils/fossils-tab.controller.js"></script>
     <script src="app/spot/sed/interpretations/interpretations-tab.controller.js"></script>
     <script src="app/spot/sed/interval/interval-tab.controller.js"></script>
     <script src="app/spot/sed/lithologies/lithologies-tab.controller.js"></script>
@@ -183,6 +185,8 @@
     <script src="app/spot/samples/samples-tab.directive.js"></script>
     <script src="app/spot/sed/bedding/bedding-tab.directive.js"></script>
     <script src="app/spot/sed/bedding/shared-bedding-fields.directive.js"></script>
+    <script src="app/spot/sed/diagenesis/diagenesis-tab.directive.js"></script>
+    <script src="app/spot/sed/fossils/fossils-tab.directive.js"></script>
     <script src="app/spot/sed/interpretations/interpretations-tab.directive.js"></script>
     <script src="app/spot/sed/interval/interval-tab.directive.js"></script>
     <script src="app/spot/sed/lithology-buttons.directive.js"></script>
