--- a/www/app/maps/side-panel/side-panel.template.html
+++ b/www/app/maps/side-panel/side-panel.template.html
@@ -94,6 +94,12 @@
         <div ng-show='sidePanel.isActiveTab("sed-structures")' ng-controller='SedStructuresTabController as vmChild'>
           <strabo-sed-structures-tab-directive></strabo-sed-structures-tab-directive>
         </div>
+        <div ng-show='sidePanel.isActiveTab("sed-diagenesis")' ng-controller='SedDiagenesisTabController as vmChild'>
+          <strabo-sed-diagenesis-tab-directive></strabo-sed-diagenesis-tab-directive>
+        </div>
+        <div ng-show='sidePanel.isActiveTab("sed-fossils")' ng-controller='SedFossilsTabController as vmChild'>
+          <strabo-sed-fossils-tab-directive></strabo-sed-fossils-tab-directive>
+        </div>
         <div ng-show='sidePanel.isActiveTab("sed-interpretations")' ng-controller='SedInterpretationsTabController as vmChild'>
           <strabo-sed-interpretations-tab-directive></strabo-sed-interpretations-tab-directive>
         </div>
