--- a/www/app/spots/spots-list-tabs-detail.directive.html
+++ b/www/app/spots/spots-list-tabs-detail.directive.html
@@ -11,5 +11,7 @@
   <span ng-if='spot.properties.sed && spot.properties.sed.lithologies' class='spot-tabs-on sed-lithologies-on'>Sed Lithologies</span>
   <span ng-if='spot.properties.sed && spot.properties.sed.bedding' class='spot-tabs-on sed-bedding-on'>Sed Bedding</span>
   <span ng-if='spot.properties.sed && spot.properties.sed.structures' class='spot-tabs-on sed-structures-on'>Sed Structures</span>
+  <span ng-if='spot.properties.sed && spot.properties.sed.diagenesis' class='spot-tabs-on sed-diagenesis-on'>Sed Diagenesis</span>
+  <span ng-if='spot.properties.sed && spot.properties.sed.fossils' class='spot-tabs-on sed-fossils-on'>Sed Fossils</span>
   <span ng-if='spot.properties.sed && spot.properties.sed.interpretations' class='spot-tabs-on sed-interpretations-on'>Sed Interpretations</span>
 </span>
