Sed: Changed field label for Lithology 2: Interbed Relative Proportion

--- a/www/app/spot/sed/bedding/shared-bedding-fields.directive.html
+++ b/www/app/spot/sed/bedding/shared-bedding-fields.directive.html
@@ -10,7 +10,7 @@
       </select>
     </ion-item>
     <ion-input class='item item-input item-stacked-label item-text-wrap'>
-      <ion-label>Interbed Relative Proportion (%)</ion-label>
+      <ion-label>Lithology 2: Interbed Relative Proportion (%)</ion-label>
       <input type='number' ng-model='vm.dataOutsideForm.interbed_proportion' min=0 max=50>
     </ion-input>
     <ion-item class="item item-input item-select item-stacked-label item-text-wrap">
