Fabrics: Added page

--- a/www/app/maps/side-panel/side-panel.template.html
+++ b/www/app/maps/side-panel/side-panel.template.html
@@ -115,6 +115,9 @@
         <div ng-show='sidePanel.isActiveTab("petrology")' ng-controller='PetrologyTabController as vmChild'>
           <strabo-petrology-tab-directive></strabo-petrology-tab-directive>
         </div>
+        <div ng-show='sidePanel.isActiveTab("fabrics")' ng-controller='FabricsTabController as vmChild'>
+          <strabo-fabrics-tab-directive></strabo-fabrics-tab-directive>
+        </div>
       </div>
     </div>
   </div>
