--- a/www/app/spots/spots-list-tabs-detail.directive.html
+++ b/www/app/spots/spots-list-tabs-detail.directive.html
@@ -14,4 +14,6 @@
   <span ng-if='spot.properties.sed && spot.properties.sed.diagenesis' class='spot-tabs-on sed-diagenesis-on'>Sed Diagenesis</span>
   <span ng-if='spot.properties.sed && spot.properties.sed.fossils' class='spot-tabs-on sed-fossils-on'>Sed Fossils</span>
   <span ng-if='spot.properties.sed && spot.properties.sed.interpretations' class='spot-tabs-on sed-interpretations-on'>Sed Interpretations</span>
+  <span ng-if='spot.properties.sed && spot.properties.pet' class='spot-tabs-on petrology-on'>Ig/Met</span>
+  <span ng-if='spot.properties.sed && spot.properties.fabrics' class='spot-tabs-on fabrics-on'>Fabrics</span>
 </span>
