--- a/www/index.html
+++ b/www/index.html
@@ -90,6 +90,7 @@
     <!-- ng spot tab controllers -->
     <script src="app/spot/3d-structures/3dstructures-tab.controller.js"></script>
     <script src="app/spot/data/data-tab.controller.js"></script>
+    <script src="app/spot/fabrics/fabrics-tab.controller.js"></script>
     <script src="app/spot/images/images-tab.controller.js"></script>
     <script src="app/spot/micro/experimental/experimental-tab.controller.js"></script>
     <script src="app/spot/micro/experimental-results/experimental-results-tab.controller.js"></script>
@@ -172,6 +173,7 @@
     <script src="app/project/tools/tools.directive.js"></script>
     <script src="app/spot/3d-structures/3dstructures-tab.directive.js"></script>
     <script src="app/spot/data/data-tab.directive.js"></script>
+    <script src="app/spot/fabrics/fabrics-tab.directive.js"></script>
     <script src="app/spot/images/images-tab.directive.js"></script>
     <script src="app/spot/micro/experimental/experimental-tab.directive.js"></script>
     <script src="app/spot/micro/experimental-results/experimental-results-tab.directive.js"></script>
