Images: Added link to go to public URL

--- a/www/app/spot/images/images-tab.directive.html
+++ b/www/app/spot/images/images-tab.directive.html
@@ -48,6 +48,11 @@
           <i class='icon ion-map'></i>
           <span class='button-text-small'>Map</span>
         </button>
+        <button ng-click='vmChild.goToPublicURL(image)'
+                class='button button-small button-clear button-positive'>
+          <i class='icon ion-earth'></i>
+          <span class='button-text-small'>Go To URL</span>
+        </button>
       </div>
     </div>
     <div class='item item-divider'>
