--- a/www/app/spot/data/data-tab.directive.html
+++ b/www/app/spot/data/data-tab.directive.html
@@ -1,45 +1,49 @@
 <div>
-	<div class="item item-divider">Links To External Data</div>
-	<div class="item item-input-inset">
-		<label class="item item-input-wrapper ">
-			<input type="url" placeholder="http://" ng-model="vmChild.url">
-		</label>
-		<button class="button button-positive" type="submit" ng-click="vmChild.urlLinkSubmit()">Add Link</button>
-	</div>
-	<div class="padding" ng-hide="vm.spot.properties.data || vm.spot.properties.data.links">
-		There are no external links
-	</div>
-	<ion-list ng-show="vm.spot.properties.data && vm.spot.properties.data.links">
-		<ion-item class='item-text-wrap item-button-right' ng-repeat="url in vm.spot.properties.data.links track by $index">
-			<i class="web-icon icon ion-android-globe"></i> &nbsp Website: &nbsp
-			<a ng-href="{{ url }}" target="blank">{{ url }}</a>
-			<div class="buttons">
-				<button class='button button-clear button-dark' ng-click='vmChild.editLink(url)'>
-					<i class='icon ion-edit'></i>
-				</button>
-				<button class='button button-clear button-assertive' ng-click='vmChild.deleteLink(url)'>
-					<i class='icon ion-minus-circled'></i>
-				</button>
-			</div>
-		</ion-item>
-	</ion-list>
-	<div class="item item-divider">CSV Files</div>
-	<ion-item ng-show="vmChild.isWeb()" class="button-text-big " ng-click='vmChild.importData()' ng-model='vmChild.importItem'>
-		<img class='strabo-icon' src='img/import-project.png'> Import CSV File
-	</ion-item>
-	<div class="padding" ng-hide="vm.spot.properties.data || vm.spot.properties.data.json">
-		There are no CSV files to display
-	</div>
-	<ion-list ng-show="vm.spot.properties.data && vm.spot.properties.data.csv">
-		<ion-item class='item-text-wrap item-button-right' ng-repeat="csvFile in vm.spot.properties.data.csv | orderBy: 'fileName' track by $index ">
-			<div ng-click="vmChild.viewCSVFile(csvFile)" class="list-sub">
-				<b>{{csvFile.fileName}}</b>
-			</div>
-			<div class="buttons">
-				<button class='button button-clear button-assertive' ng-click='vmChild.deleteCSV(csvFile)'>
-					<i class='icon ion-minus-circled'></i>
-				</button>
-			</div>
-		</ion-item>
-	</ion-list>
+  <input type='file' id='dataFile' style='display: none;'>
+  <div class="item item-divider">Links To Web Resources</div>
+  <div class="item item-input-inset">
+    <label class="item item-input-wrapper ">
+      <input type="url" placeholder="http://" ng-model="vmChild.url">
+    </label>
+    <button class="button button-positive" type="submit" ng-click="vmChild.urlSubmit()">Add Link</button>
+  </div>
+  <div class="padding" ng-hide="vm.spot.properties.data && vm.spot.properties.data.urls">
+    There are no linked URLs.
+  </div>
+  <ion-list ng-show="vm.spot.properties.data && vm.spot.properties.data.urls">
+    <ion-item class='item-text-wrap item-button-right' ng-repeat="url in vm.spot.properties.data.urls track by $index">
+      <i class="icon ion-earth"></i>
+      <a ng-href="{{ url }}" target="blank">{{ url }}</a>
+      <div class="buttons">
+        <button class='button button-clear button-dark' ng-click='vmChild.editURL(url)'>
+          <i class='icon ion-edit'></i>
+        </button>
+        <button class='button button-clear button-assertive' ng-click='vmChild.deleteURL(url)'>
+          <i class='icon ion-minus-circled'></i>
+        </button>
+      </div>
+    </ion-item>
+  </ion-list>
+  <div class="item item-divider">Tables</div>
+  <button ng-click='vmChild.importData()'
+          class='button button-clear button-positive'>
+    <i class='icon ion-paperclip'></i>
+    <span class='button-text-big'>Attach Table from a CSV File</span>
+  </button>
+  <div class="padding" ng-hide="vm.spot.properties.data && vm.spot.properties.data.tables">
+    There are no tables to display.
+  </div>
+  <ion-list ng-show="vm.spot.properties.data && vm.spot.properties.data.tables">
+    <ion-item class='item-text-wrap item-button-right'
+              ng-repeat="table in vm.spot.properties.data.tables | orderBy: 'name' track by $index ">
+      <div ng-click="vmChild.viewTable(table)" class="list-sub">
+        <b>{{table.name}}</b>
+      </div>
+      <div class="buttons">
+        <button class='button button-clear button-assertive' ng-click='vmChild.deleteTable(table)'>
+          <i class='icon ion-minus-circled'></i>
+        </button>
+      </div>
+    </ion-item>
+  </ion-list>
 </div>
