Fabrics: Changed button wording

--- a/www/app/spot/fabrics/fabrics-tab.directive.html
+++ b/www/app/spot/fabrics/fabrics-tab.directive.html
@@ -7,12 +7,12 @@
   <button ng-click='vmChild.addFabric("igneous_rock")'
           class='button button-clear button-positive'>
     <i class='icon ion-plus-circled'></i>
-    <span class='button-text-big'>Add an Igneous Rock Fabric</span>
+    <span class='button-text-big'>Add an Igneous Fabric</span>
   </button>
   <button ng-click='vmChild.addFabric("metamorphic_rock")'
           class='button button-clear button-positive'>
     <i class='icon ion-plus-circled'></i>
-    <span class='button-text-big'>Add a Metamorphic Rock Fabric</span>
+    <span class='button-text-big'>Add a Metamorphic Fabric</span>
   </button>
   <ion-list>
     <ion-item class='item-text-wrap item-button-right'
