--- a/www/index.html
+++ b/www/index.html
@@ -36,6 +36,7 @@
     <!-- openlayers 3 layerswitcher -->
     <link rel="stylesheet" href="lib/ol/ol3-layerswitcher.css">
     <script src="lib/ol/ol3-layerswitcherMODIFIED.js"></script>
+    <script src="lib/ionic-native/ionic.native.js"></script>
     <!-- local storage with localForage and SQLite Driver -->
     <script src="lib/localforage.min.js"></script>
     <script src="lib/localforage-cordovasqlitedriver.js"></script>
